# vkQuake-RmlUi

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  meson.build  meson_options.txt  setup.sh
.github/workflows/: build-linux.yml  build-mac.yml  build-mingw.yml  build-msys2-clangarm64.yml  build-windows.yml
Misc/vq_pak/: vq_pak_contents.txt
Packaging/AppImage/: run-in-docker.sh
Quake/: cl_demo.c  cl_main.c  client.h  console.c  gl_rmain.c  gl_rmisc.c  gl_screen.c  gl_vidsdl.c  glquake.h  host.c  host_cmd.c  in_sdl.c  in_sdl2.c  in_sdl3.c  keys.c  keys.h  menu.c  menu.h  pr_ext.c  q_stdinc.h  quakedef.h  rmlui_bridge.cpp  rmlui_bridge.h  sbar.c  sys_sdl_unix.c  sys_sdl_win.c  vid.h  view.c
Shaders/: pipeline.py  postprocess.frag  postprocess.vert  rmlui.frag  rmlui.vert  rmlui_frag.spv  rmlui_notex.frag  rmlui_notex_frag.spv  rmlui_vert.spv
docs/: CVAR_BINDINGS.md  DATA_CONTRACT.md  MOD_UI_GUIDE.md  POST_PROCESS.md  RMLUI_INTEGRATION.md  SDL_INPUT_PARITY.md  UI_PERF_LIGHT_OPTIMIZATION_PLAN.md  UI_SPEEDS.md
scripts/: compile-maps.sh  extract-wad.py  setup-tools.sh
src/: ui_manager.cpp  ui_manager.h
src/internal/: action_registry.h  cvar_binding.cpp  cvar_binding.h  engine_bridge.h  game_data_model.cpp  game_data_model.h  game_field_schema.h  lua_bridge.cpp  lua_bridge.h  menu_event_handler.cpp  menu_event_handler.h  notification_model.cpp  notification_model.h  quake_command_executor.cpp  quake_command_executor.h  reticle_elements.cpp  (+20 more)
subprojects/: rmlui
ui/: CLAUDE.md
ui_lab/: README.md  default.cfg  quake.rc
(+92 files in other folders)
