option('use_sdl3', type : 'boolean', value : false, description : 'Use SDL3 instead of SDL2')
option('use_codec_wave', type : 'feature', value : 'enabled')
option('use_codec_mp3', type : 'feature', value : 'auto')
option('use_codec_flac', type : 'feature', value : 'auto')
option('use_codec_vorbis', type : 'feature', value : 'auto')
option('use_codec_opus', type : 'feature', value : 'auto')
option('mp3_lib', type : 'combo', value : 'mpg123', choices: ['mad', 'mpg123'])
option('vorbis_lib', type : 'combo', value : 'vorbis', choices: ['vorbis', 'tremor'])
option('use_codec_xmp', type : 'feature', value : 'auto')
option('use_codec_mikmod', type : 'feature', value : 'auto')
option('use_codec_modplug', type : 'feature', value : 'auto')
option('do_userdirs', type: 'feature', value : 'enabled')
option('use_rmlui', type : 'boolean', value : true, description : 'Enable RmlUI overlay support')
option('use_lottie', type : 'boolean', value : true, description : 'Enable Lottie vector animations (requires rlottie)')
